# wealth-manager

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  project-setup.sh  pytest.ini  requirements-all.txt  requirements-test.txt  requirements.txt  run_monolith.sh  run_tests.sh  setup_services.sh
docs/: PRD.md  (+5 more)
services/investment-service/: .env  .env.example  .env.test  .gitignore  Dockerfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
services/investment-service/docs/: openapi.yaml
services/investment-service/src/: __init__.py  main.py
services/investment-service/src/core/: auth.py  config.py  database.py  test_config.py
services/investment-service/src/investment_service/: main.py
services/investment-service/src/models/: investment.py
services/investment-service/src/schemas/: investment.py
services/investment-service/tests/: conftest.py  investment_conftest.py  pytest.ini
services/investment-service/tests/e2e/: test_portfolio.py
services/investment-service/tests/integration/: test_endpoints.py
services/investment-service/tests/unit/: test_models.py  test_schemas.py
services/user-service/: Dockerfile  pyproject.toml  requirements.txt
services/user-service/docs/: openapi.yaml
services/user-service/src/: main.py
services/user-service/src/core/: config.py  database.py  security.py
services/user-service/src/models/: user.py
services/user-service/tests/: .env.test  conftest.py  test_config.py  test_database.py  test_endpoints.py  test_models.py  test_schemas.py  test_security.py  user_conftest.py
(+36 files in other folders)
